# notes

./: .gitignore  .markdownlint.json  LICENSE  README.md  build.sh  citations.bib  deploy.sh  dev.sh  gen_images.sh  netlify.toml  package-lock.json  package.json  pelicanconf.py  pyproject.toml  requirements.txt  setup.sh  voice-conversion.md
an-introduction-to-asynch-programming-and-twisted/: README.md  part-3-ex-1.py  part-3-ex-2.py  part_5_ex_1.py
articles/: bodymovers.md  intro-to-raycasting.md  lodes-computer-graphics-tutorial.md
books/: the-art-of-game-design-a-book-of-lenses-2nd-edition.md  unit-testing-principals-practices-and-patterns.md
code/: cbis_ddsm_roi_visualization.py  convex_hull.py  create_function_diagram.py  fahrenheit_to_celsius.py  hyperplane_cover.py  kmeans_cover.py  leaky_relu.py  linear_beers.py  mel_cover.py  mel_scale.py  melspectogram.py  pacman_frame_stack.py  pca_cover.py  quadratic_function.py  relu.py  sample_rate.py  snake_activate_function.py  sound_wave.py  taxi.py  waffle_chart.py  waffle_chart_cover.py
computational-investing-part-1-coursera/: README.md  week-3.md  week-4.md  week-5.md  week-8.md
content/: comp_investing_part_1.md  dynamically-loading-modules-and-classes-in-python.md  get-the-last-day-of-every-month-in-a-range-with-python.md  getting-started-with-ansible.md  implementing-and-customising-lazy-signup-in-django.md  integrating-bootstrap-with-django-using-less-and-fabric.md  intro-to-data-science-udacity-review.md  introducing-giantdwarf.md  magic-ranker.md  new-xbmc-plugins-thisweekincom-thenewboston.md  (+6 more)
(+2222 files in other folders)
